--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: You
+first_name: Trent
 middle_name: R.
-last_name: Name
-email: you@example.com
+last_name: Walraven
+email: trent@walraven.dev
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -211,6 +211,7 @@ exclude:
   - Gemfile
   - Gemfile.lock
   - vendor
+  - venv
 keep_files:
   - CNAME
   - .nojekyll
